fix animation img alignment grid fr

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 
 body {
   display: grid;
-  grid-template-rows: 1fr 2fr 0.5fr;
+  grid-template-rows: 0.5fr 2fr 0.5fr;
   min-height: 100vh;
   max-width: 100vw;
   background-color: var(--background-color);
@@ -24,7 +24,7 @@ header {
 }
 
 main {
-  margin-top: 5vh;
+  margin-top: 2vh;
 }
 
 header p {
@@ -42,6 +42,15 @@ header p:nth-child(3) {
   font-size: 0.5em;
 }
 
+.request-form {
+  margin-top: 3rem;
+}
+
+img {
+  max-height: 40vh;
+  max-width: 80vw;
+}
+
 .button {
   min-width: 95vw;
   text-align: center;
@@ -51,6 +60,7 @@ header p:nth-child(3) {
   font-family: var(--fun-font);
   border-style: none;
   box-shadow: 0 1px 1px var(--green-color), 0 8px 20px var(--grey-color);
+  margin-top: 3rem;
 }
 
 .button__start:hover {
@@ -88,7 +98,7 @@ header p:nth-child(3) {
   text-align: center;
 }
 
-.reaload__page {
+.button__reload {
   max-width: 100%;
   font-size: 1.5rem;
   font-family: var(--main-font);
@@ -137,8 +147,12 @@ footer {
 @media only screen and (min-width: 600px) {
   body {
     display: grid;
-    grid-template-rows: 1fr 2fr 0.5fr;
+    grid-template-rows: 0.5fr 2fr 0.5fr;
     max-height: 100%;
+  }
+
+  img {
+    max-height: 60vh;
   }
 
   header p:nth-child(1) {
@@ -157,7 +171,7 @@ footer {
   }
 
   main {
-    padding: 3rem 0;
+    padding: 1rem 0;
   }
 
   .form__container {
